# ldbnn

./: CMakeLists.txt  Makefile  README.md  nn  nn.cpp  nn.h
examples/: CMakeLists.txt
examples/xor/: CMakeLists.txt  xor  xor.cpp
includes/L_NN/: nn.h
src/: CMakeLists.txt  nn.cpp
tests/: test_node.cpp
